feat: apply circuitbreaker

--- a/micro-blog/backend_api/configs/config.yaml
+++ b/micro-blog/backend_api/configs/config.yaml
@@ -40,6 +40,7 @@ client:
     middleware:
       enable_recovery: true
       enable_tracing: true
+      enable_circuit_breaker: true
 
 registry:
   type: "consul"
