--- a/k8s/.k8s/user-srv-deployment.yaml
+++ b/k8s/.k8s/user-srv-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     metadata:
       labels:
         app: user-srv
-        gomicro-service-id: "56991810-0002-4a95-8190-393efa9c1a61"
-        gomicro-service-app: "examples.k8s.user.srv"
+        gomicro-service-id: "0002.go-micro.user-srv"
+        gomicro-service-app: "go-micro.user-srv"
         gomicro-service-version: "v1.0.0"
       annotations:
         gomicro-service-protocols: |
