--- a/k8s/token-srv/configs/config.yaml
+++ b/k8s/token-srv/configs/config.yaml
@@ -4,7 +4,11 @@ server:
     timeout: 1s
 
 registry:
-  type: "k8s"
+  type: "consul"
+  consul:
+    address: 127.0.0.1:8500
+    scheme: http
+    health_check: false
 
 auth:
   api_key: "some_api_key"
