--- a/k8s/.docker/compose/docker-compose.yaml
+++ b/k8s/.docker/compose/docker-compose.yaml
@@ -12,3 +12,38 @@ services:
       - CONSUL_ENABLE_UI=true
       - CONSUL_BOOTSTRAP_EXPECT=1
       - CONSUL_CLIENT_LAN_ADDRESS=0.0.0.0
+
+  jaeger:
+    image: docker.io/jaegertracing/all-in-one:latest
+    ports:
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "5778:5778"
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
+      - "14250:14250"
+      - "14268:14268"
+      - "14269:14269"
+      - "9411:9411"
+    environment:
+      - COLLECTOR_ZIPKIN_HOST_PORT=:9411
+      - COLLECTOR_OTLP_ENABLED=true
+
+  admin-srv:
+    image: devexps/admin-srv:k8s
+    ports:
+      - "8080:8080"
+      - "9090:9090"
+    depends_on:
+      - consul
+
+  user-srv:
+    image: devexps/user-srv:k8s
+    depends_on:
+      - consul
+
+  token-srv:
+    image: devexps/token-srv:k8s
+    depends_on:
+      - consul
