--- a/k8s/admin-srv/configs/config.yaml
+++ b/k8s/admin-srv/configs/config.yaml
@@ -25,9 +25,9 @@ client:
 registry:
   type: "consul"
   consul:
-    address: 127.0.0.1:8500
+    address: consul:8500
     scheme: http
     health_check: false
 
 trace:
-  endpoint: 127.0.0.1:6831
+  endpoint: jaeger:6831
