--- a/k8s/token-srv/configs/config.yaml
+++ b/k8s/token-srv/configs/config.yaml
@@ -1,12 +1,12 @@
 server:
   grpc:
-    addr: 0.0.0.0:9090
+    addr: 0.0.0.0:9092
     timeout: 1s
 
 registry:
   type: "consul"
   consul:
-    address: 127.0.0.1:8500
+    address: consul:8500
     scheme: http
     health_check: false
 
@@ -14,4 +14,4 @@ auth:
   api_key: "some_api_key"
 
 trace:
-  endpoint: 127.0.0.1:6831
+  endpoint: jaeger:6831
